Updated contact.html and changed color scheme

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "cleanUrls": true,
-  "rewrites": [
-    {
-      "source": "/todo-list",
-      "destination": "https://to-do-list-rouge-seven.vercel.app/"
-    }
-  ]
+  "cleanUrls": true
 }
