Changed project names

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,10 @@
 {
-  "cleanUrls": true
+  "cleanUrls": true,
+  "redirects": [
+    {
+      "source": "/todo-list",
+      "destination": "https://to-do-list-rouge-seven.vercel.app/",
+      "permanent": true
+    }
+  ]
 }
