--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "vite": "^6.0.2"
+    "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "vite": "^6.0.3"
+  },
+  "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
   }
 }
